Auto stash before merge of "master" and "origin/master"

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,24 +8,26 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/aos": "^3.0.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "aos": "^2.3.4",
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.21.0",
     "material-ui-password-field": "^2.1.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "typescript": "4.0.5",
-    "web-vitals": "^0.2.4",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.1.0"
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.0",
+    "typescript": "4.0.5",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
